--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
 Django==1.10.1
+Pillow==3.4.2
+Twisted==16.5.0
 argparse==1.2.1
+asgi-redis==1.0.0
+asgiref==1.0.0
+autobahn==0.16.1
+channels==0.17.3
+constantly==15.1.0
+daphne==0.15.0
+incremental==16.10.1
+msgpack-python==0.4.8
+redis==2.10.5
+six==1.10.0
+txaio==2.5.2
 wsgiref==0.1.2
+zope.interface==4.3.2
